fixed spacing, margins, padding, etc to make it look good

--- a/css/global.css
+++ b/css/global.css
@@ -344,12 +344,14 @@ footer a img:hover {
 
 /* footer main is the container for all content except for very bottom links */
 .footer-main {
-	padding: var(--spacing40) 0;
+	padding-top: var(--spacing40);
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	/* align-items: center; */
 }
-
+.footer-form .h4-styles {
+	margin-top: 0px;
+}
 /* Logo and land acknowledgement button container*/
 .footer-logo-btn {
 	display: flex;
@@ -359,6 +361,7 @@ footer a img:hover {
 /* footer links list */
 .links-columns {
 	min-width: 250px;
+	margin: 0px;
 }
 /* Land Acknowledgement button */
 .btn-la {
@@ -534,16 +537,16 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 	.footer-form {
 		width: 40%;
 	}
-	form {
+	.footer-form form {
 		display: flex;
 		flex-direction: column;
 		text-align: left;
 		/* removing padding on button to align with content */
-		padding-right: 0px;
+		padding: 0px;
 	}
-	form p {
+	.footer-form form p {
 		color: var(--color-white);
-		width: 60%;
+		width: 85%;
 	}
 	.text-input {
 		display: flex;
@@ -574,8 +577,9 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 	.links-columns{
 		display: flex;
 		flex-direction: row;
-		justify-content: space-evenly;
-		width: 80%;
+		justify-content: center;
+		gap: 10%;
+		width: 100%;
 	}
 	.links-child {
 		display: flex;
